<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddTask">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/title_addTask"
            android:textColor="@color/colorTextPrimary"
            android:textSize="30sp"
            android:textStyle="bold"
            android:typeface="monospace" />
    </com.google.android.material.appbar.MaterialToolbar>

    <TextView
        android:id="@+id/tv_taskName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/title_noTaskName"
        android:textColor="@color/colorTextPrimary"
        android:textSize="24sp"
        android:typeface="monospace" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_alignParentBottom="true">

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/taskName"
            android:layout_marginBottom="16dp"
            app:alignContent="center"
            app:justifyContent="space_evenly">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_addReminder"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:text="@string/btn_add_reminder"
                android:textColor="@color/colorTextPrimary"
                android:drawableTop="@drawable/ic_alarm_on_24dp"
                android:drawablePadding="16dp"/>

            <androidx.appcompat.widget.AppCompatButton
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:text="@string/btn_attach_files"
                android:textColor="@color/colorTextPrimary"
                android:drawableTop="@drawable/ic_attach_file_24dp"
                android:drawablePadding="16dp"/>

        </com.google.android.flexbox.FlexboxLayout>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/taskName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/taskNote"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:focusableInTouchMode="true"
            android:hint="@string/hint_taskName"
            android:inputType="textAutoCorrect"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/colorTextSecondary" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/taskNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/fab_addTask"
            android:layout_margin="16dp"
            android:drawablePadding="8dp"
            android:hint="@string/hint_taskNote"
            android:lines="4"
            android:singleLine="false"
            android:textColor="@color/colorTextSecondary" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/fab_addTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="16dp"
            android:text="@string/btn_addTask"
            android:textColor="@color/colorFabIcon"
            app:backgroundTint="@color/colorAccent"
            app:icon="@drawable/ic_done_24dp"
            app:iconTint="@color/colorFabIcon"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>
</RelativeLayout>